--- a/client/index.html
+++ b/client/index.html
@@ -15,19 +15,21 @@
 	<link rel="stylesheet" href="bower_components/mobile-angular-ui/dist/css/mobile-angular-ui-desktop.min.css" />
 
 	<script src="bower_components/angular/angular.min.js"></script>
+	<script src="bower_components/angular-local-storage/dist/angular-local-storage.min.js"></script>
+	<script src="bower_components/guid/guid.js"></script>
 	<script src="bower_components/mobile-angular-ui/dist/js/mobile-angular-ui.min.js"></script>
 
 	<script src="src/main.js"></script>
 
 	<link rel="stylesheet" href="styles/votelist.css" />
 </head>
-<body ng-app="voteListApp" ng-controller="voteListCtrl" class="has-navbar-top has-navbar-bottom">
+<body ng-app="voteListApp" class="has-navbar-top has-navbar-bottom">
 
 	<!-- Sidebars -->
 	<div class="sidebar sidebar-left"><!-- ... --></div>
 	<div class="sidebar sidebar-right"><!-- ... --></div>
 
-	<div class="app">
+	<div class="app" ng-controller="voteListCtrl">
 		<div class="navbar navbar-app navbar-absolute-top vl-search-bar">
 			<div class="input-group">
 				<input type="text" class="form-control" id="search" ng-model="searchText" placeholder="Suchen">
@@ -37,12 +39,16 @@
 			</div>
 		</div>
 		<div class="navbar navbar-app navbar-absolute-bottom vl-add-bar">
-			<div class="input-group">
-				<input type="text" class="form-control" id="add" ng-model="addText" placeholder="Hinzufügen">
-				<span class="input-group-addon">
-					<span class="fa fa-plus"></span>
-				</span>
-			</div>
+			<form ng-submit="vl.addItem(addText)">
+				<div class="input-group">
+					<input type="text" class="form-control" id="add" ng-model="addText" placeholder="Hinzufügen">
+					<a href="#" class="input-group-addon" ng-click="vl.addItem(addText)">
+						<span ng-show="!thinkingAddItem" class="fa fa-plus"></span>
+						<span ng-show="thinkingAddItem" class="fa fa-refresh fa-refresh-animate"></span>
+					</a>
+				</div>
+				<input type="submit" ng-show="false" id="addSubmit">
+			</form>
 		</div>
 
 		<!-- App body -->
@@ -52,10 +58,10 @@
 				<div class="votelist">
 					<table>
 						<tbody>
-							<tr>
-								<td class="voteUp"><span class="fa fa-thumbs-o-up"></span> 5</td>
-								<td class="voteDown"><span class="fa fa-thumbs-o-down"></span> -2</td>
-								<td class="songText">Song text</td>
+							<tr ng-repeat="vi in vl.list">
+								<td class="voteUp"><span class="fa fa-thumbs-o-up"></span> {{vi.votesUp}}</td>
+								<td class="voteDown"><span class="fa fa-thumbs-o-down"></span>  {{vi.votesDown}}</td>
+								<td class="songText">{{vi.title}}</td>
 							</tr>
 						</tbody>
 					</table>
@@ -66,5 +72,27 @@
 
 	<!-- Modals and Overlays -->
 	<div ui-yield-to="modals"></div>
+	<div ui-content-for="modals">
+		<div class="modal" ui-if="loginModal" ui-shared-state='loginModal'>
+			<div class="modal-backdrop in"></div>
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h2 class="modal-title">Anmeldung</h2>
+					</div>
+					<div class="modal-body">
+						<form ng-submit="uiLogin()">
+							<p>Bitte melde dich mit unserem Standardpasswort an:</p>
+							<input type="password" class="form-control" ng-model="vl.passphrase" placeholder="Passwort">
+						</form>
+					</div>
+					<div class="modal-footer">
+						<span>{{vl.modalError}}</span>
+						<button class="btn btn-primary" ng-click="uiLogin()">Anmelden</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
