--- a/client/index.html
+++ b/client/index.html
@@ -26,22 +26,114 @@
 <body ng-app="voteListApp" class="has-navbar-top has-navbar-bottom">
 
 	<!-- Sidebars -->
-	<div class="sidebar sidebar-left"><!-- ... --></div>
-	<div class="sidebar sidebar-right"><!-- ... --></div>
-
-	<div class="app" ng-controller="voteListCtrl">
-		<div class="navbar navbar-app navbar-absolute-top vl-search-bar">
-			<div class="input-group">
-				<input type="text" class="form-control" id="search" ng-model="searchText" placeholder="Suchen">
-				<span class="input-group-addon">
-					<span class="fa fa-search"></span>
-				</span>
+	<div class="sidebar sidebar-left">
+		<div class="scrollable">
+			<h1 class="scrollable-header app-name">T&amp;D Musikwünsche</h1>
+			<div class="scrollable-content">
+				<div class="list-group" ui-turn-off="uiSidebarLeft">
+					<a class="list-group-item" href="#" ui-turn-on="authorModal">Namen ändern</a>
+					<a class="list-group-item" href="https://tine-und-denis.de/">Zurück zur Homepage</a>
+					<a class="list-group-item" href="https://github.com/denis-martin/votelist" target="_blank">&copy; 2017 Denis Martin</a>
+				</div>
 			</div>
 		</div>
+	</div>
+
+	<div class="sidebar sidebar-right">
+		<div class="scrollable">
+			<h1 class="scrollable-header app-name">Musikwunsch</h1>
+			<div class="scrollable-content">
+				<div class="list-group">
+					<span class="list-group-item media">
+						<div class="media-body">
+							<span ng-if="!vl.activeItem.canEdit">{{vl.activeItem.title}}</span>
+							<form ng-if="vl.activeItem.canEdit" ng-submit="vl.saveItem(vl.activeItem, vl.editText)">
+								<div class="input-group">
+									<input type="text" class="form-control" id="edit" ng-model="vl.editText" placeholder="Bearbeiten (Interpret - Titel)">
+									<a href="#" class="input-group-addon" ng-click="vl.saveItem(vl.activeItem, vl.editText)">
+										<span ng-show="!vl.thinkingSaveItem" class="fa fa-floppy-o"></span>
+										<span ng-show="vl.thinkingSaveItem" class="fa fa-refresh fa-refresh-animate"></span>
+									</a>
+								</div>
+								<input type="submit" ng-show="false" id="editSubmit">
+							</form>
+						</div>
+					</span>
+					<span ng-if="vl.activeItem.canEdit || (vl.activeItem.author && vl.activeItem.author != 'Gast')" class="list-group-item media">
+						<div class="media-body">
+							Gewünscht von {{vl.activeItem.canEdit ? "dir" : vl.activeItem.author}}
+						</div>
+					</span>
+					<span class="list-group-item media">
+						<div class="media-body">
+							<div ng-if="!vl.activeItem.canVote" class="pull-left">
+								<span style="color: green; font-size: 200%">
+									<span class="fa fa-thumbs-o-up"></span>
+								</span>
+							</div>
+							<div class="pull-right">
+								{{vl.activeItem.votesUp}} Stimmen dafür
+								<span ng-if="vl.activeItem.canVote">&ndash; Stimme ab: </span>
+								<button ng-if="vl.activeItem.canVote" class="btn btn-default" ng-click="vl.vote(vl.activeItem, 'voteup')">
+									<span style="color: green">
+										<span ng-show="!vl.thinkingVoteItem" class="fa fa-thumbs-o-up"></span>
+										<span ng-show="vl.thinkingVoteItem" class="fa fa-refresh fa-refresh-animate"></span>
+									</span>
+								</button>
+								<span ng-if="!vl.activeItem.canVote"><br>(du hast bereits abgestimmt)</span>
+							</div>
+						</div>
+					</span>
+					<span class="list-group-item media">
+						<div class="media-body">
+							<div ng-if="!vl.activeItem.canVote" class="pull-left">
+								<span style="color: red; font-size: 200%">
+									<span class="fa fa-thumbs-o-down"></span>
+								</span>
+							</div>
+							<div class="pull-right">
+								{{vl.activeItem.votesDown}} Stimmen dagegen
+								<span ng-if="vl.activeItem.canVote">&ndash; Stimme ab: </span>
+								<button ng-if="vl.activeItem.canVote" class="btn btn-default" ng-click="vl.vote(vl.activeItem, 'votedown')">
+									<span style="color: red">
+										<span ng-show="!vl.thinkingVoteItem" class="fa fa-thumbs-o-down"></span>
+										<span ng-show="vl.thinkingVoteItem" class="fa fa-refresh fa-refresh-animate"></span>
+									</span>
+								</button>
+								<span ng-if="!vl.activeItem.canVote"><br>(du hast bereits abgestimmt)</span>
+							</div>
+						</div>
+					</span>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="app" ng-controller="voteListCtrl" 
+		ui-swipe-right="Ui.turnOn('uiSidebarLeft')" 
+		ui-swipe-left="Ui.turnOff('uiSidebarLeft')">
+
+		<div class="navbar navbar-app navbar-absolute-top vl-search-bar">
+			<div class="btn-group pull-left">
+				<div ui-toggle="uiSidebarLeft" class="btn sidebar-toggle">
+					&nbsp;<i class="fa fa-bars"></i>
+				</div>
+			</div>
+			<form ng-submit="vl.applySearch(searchText)" style="padding: 8px">
+				<div class="input-group">
+					<input type="text" class="form-control" id="search" ng-model="searchText" placeholder="Suchen">
+					<a href="#" class="input-group-addon" ng-click="vl.applySearch(searchText)">
+						<span class="fa fa-search"></span>
+					</a>
+				</div>
+				<input type="submit" ng-show="false" id="searchSubmit">
+			</form>
+		</div>
+
 		<div class="navbar navbar-app navbar-absolute-bottom vl-add-bar">
 			<form ng-submit="vl.addItem(addText)">
 				<div class="input-group">
-					<input type="text" class="form-control" id="add" ng-model="addText" placeholder="Hinzufügen">
+					<input type="text" class="form-control" id="add" ng-model="addText" placeholder="Hinzufügen (Interpret - Titel)">
 					<a href="#" class="input-group-addon" ng-click="vl.addItem(addText)">
 						<span ng-show="!thinkingAddItem" class="fa fa-plus"></span>
 						<span ng-show="thinkingAddItem" class="fa fa-refresh fa-refresh-animate"></span>
@@ -55,16 +147,23 @@
 
 		<div class='app-body'>
 			<div class='app-content'>
-				<div class="votelist">
-					<table>
-						<tbody>
-							<tr ng-repeat="vi in vl.list">
-								<td class="voteUp"><span class="fa fa-thumbs-o-up"></span> {{vi.votesUp}}</td>
-								<td class="voteDown"><span class="fa fa-thumbs-o-down"></span>  {{vi.votesDown}}</td>
-								<td class="songText">{{vi.title}}</td>
-							</tr>
-						</tbody>
-					</table>
+				<div class="scrollable">
+					<div class="scrollable-content">
+						<div class="votelist">
+							<table ui-toggle="uiSidebarRight">
+								<tbody>
+									<tr ng-repeat="vi in vl.list | filter:vl.filter" ng-click="vl.setActiveItem(vi)">
+										<td class="voteUp"><span class="fa fa-thumbs-o-up"></span> {{vi.votesUp}}</td>
+										<td class="voteDown"><span class="fa fa-thumbs-o-down"></span>  {{vi.votesDown}}</td>
+										<td class="songText">{{vi.title}}</td>
+									</tr>
+								</tbody>
+							</table>
+							<center style="margin-top: 20px;">
+								<a href="#" ng-show="vl.filter.title" ng-click="vl.resetSearch()">Suche zurücksetzen</a>
+							</center>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -89,6 +188,27 @@
 					<div class="modal-footer">
 						<span>{{vl.modalError}}</span>
 						<button class="btn btn-primary" ng-click="uiLogin()">Anmelden</button>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="modal" ui-if="authorModal" ui-shared-state='authorModal'>
+			<div class="modal-backdrop in"></div>
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h2 class="modal-title">Wie heißt du?</h2>
+					</div>
+					<div class="modal-body">
+						<form ng-submit="uiChangeName()">
+							<p>Verrate uns deinen Namen oder trage 'Gast' ein, wenn du anonym Vorschläge machen möchtest:</p>
+							<input type="text" class="form-control" ng-model="vl.userName" placeholder="Name">
+						</form>
+					</div>
+					<div class="modal-footer">
+						<span>{{vl.modalError}}</span>
+						<button class="btn btn-primary" ng-click="uiChangeName()">Ok</button>
 					</div>
 				</div>
 			</div>
