some style fixes

--- a/client/index.html
+++ b/client/index.html
@@ -110,11 +110,11 @@
 					</span>
 				</div>
 				<div class="list-group">
-					<span class="list-group-item media">
-						<div class="media-body" ui-toggle="uiSidebarRight">
+					<a href="#" class="list-group-item media" ui-toggle="uiSidebarRight">
+						<div class="media-body">
 							<i class="fa fa-arrow-left" aria-hidden="true"></i> Zurück
 						</div>
-					</span>
+					</a>
 				</div>
 			</div>
 		</div>
