--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<meta name="viewport" content="initial-scale=1, width=device-width"/>
-	<title>T &amp; D &ndash; Musikwünsche</title>
+	<title>Vote 4 Joe</title>
 
 	<!-- Only required for desktop -->
 	<link rel="stylesheet" href="bower_components/mobile-angular-ui/dist/css/mobile-angular-ui-hover.min.css" />
@@ -28,7 +28,7 @@
 	<!-- Sidebars -->
 	<div class="sidebar sidebar-left">
 		<div class="scrollable">
-			<h1 class="scrollable-header app-name">T&amp;D Musikwünsche</h1>
+			<h1 class="scrollable-header app-name">Joes Musikwünsche</h1>
 			<div class="scrollable-content">
 				<div class="list-group" ui-turn-off="uiSidebarLeft">
 					<a class="list-group-item" href="#" ui-turn-on="authorModal">Namen ändern</a>
@@ -37,7 +37,7 @@
 				</div>
 				<div class="list-group" ui-turn-off="uiSidebarLeft">
 					<a class="list-group-item" href="https://tine-und-denis.de/" target="_blank">Zur Homepage</a>
-					<a class="list-group-item" href="https://github.com/denis-martin/votelist" target="_blank">&copy; 2017 Denis Martin</a>
+					<a class="list-group-item" href="https://github.com/denis-martin/votelist" target="_blank">&copy; 2019 denis</a>
 				</div>
 			</div>
 		</div>
