further style updates

--- a/client/index.html
+++ b/client/index.html
@@ -36,7 +36,7 @@
 					<a class="list-group-item" href="#" ng-click="vl.sortByTitle()">Sortieren: alphabetisch</a>
 				</div>
 				<div class="list-group" ui-turn-off="uiSidebarLeft">
-					<a class="list-group-item" href="https://tine-und-denis.de/" target="_blank">Zur Homepage</a>
+					<a class="list-group-item" href="https://joebaka.de/" target="_blank">Zur Homepage</a>
 					<a class="list-group-item" href="https://github.com/denis-martin/votelist" target="_blank">&copy; 2019 denis</a>
 				</div>
 			</div>
